--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -20,8 +20,8 @@ pre {
 }
 
 *,
-input {
-  font-family: "HarmonyOS";
+.input {
+  font-family: "Product Sans";
 }
 
 .accent {
@@ -35,7 +35,7 @@ input {
 .navbar-logo {
   font-size: 20px;
   margin: auto !important;
-  font-weight: 400px;
+  font-weight: 500;
 }
 
 .paranoid {
@@ -118,6 +118,10 @@ img {
   margin: 0 0 0 0;
 }
 
+.sidenav li > a {
+  border-radius: 14px;
+}
+
 .card {
   margin: 0px;
   background-color: var(--background) !important;
@@ -125,7 +129,6 @@ img {
 
 #slide-out,
 a {
-  background-color: var(--card) !important;
   color: var(--text) !important;
 }
 
@@ -148,14 +151,6 @@ pre {
 .sidenav-trigger,
 .sidenav-trigger:hover {
   background-color: var(--card) !important;
-}
-
-a:hover {
-  color: var(--accent) !important;
-}
-
-span:hover {
-  color: var(--accent) !important;
 }
 
 table a {
@@ -191,7 +186,6 @@ svg path {
   text-align: center;
   z-index: 10;
   border-radius: 3px;
-  box-shadow: 0 0.8px 4px rgba(0, 0, 0, 0.07), 0 0.8px 2px rgba(0, 0, 0, 0.15) !important;
 }
 
 .menu div {
@@ -211,13 +205,14 @@ svg path {
 }
 
 i {
-  color: var(--accent) !important;
+  color: var(--text) !important;
   margin-right: 7px !important;
 }
 
 .bar-logo {
   margin-top: 20px;
   max-width: 99%;
+  background-color: transparent !important;
 }
 
 .upper-bold {
@@ -248,11 +243,11 @@ i {
 }
 
 @media only screen and (max-width: 600px) {
-  .fragment-root {
-    margin-top: 50% !important;
-  }
-  .center {
-    padding-top: 16px;
+  .test {
+    height: calc(100vh - 100px);
+    align-items: center;
+    display: flex;
+    justify-content: center;
   }
   .showlogo {
     display: none !important;
@@ -265,13 +260,16 @@ i {
   .home-bottom-info {
     margin-top: 4% !important;
   }
+  .bannerLogo {
+    height: max-content;
+  }
 }
 
 @media only screen and (min-width: 1000px) {
   #slide-out {
     -webkit-transform: translateX(0%);
     transform: translateX(0%);
-    border-radius:  0px 24px 24px 0px;
+    border-color: transparent !important;
   }
 
   .sidebar {
@@ -317,6 +315,9 @@ i {
     -webkit-transform: scale(1.07);
     transition: transform .2s;
     transform: scale(1.07);
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
   }
 
   li.zips:not(:hover) {
@@ -324,6 +325,9 @@ i {
     -webkit-transform: scale(1.00);
     transition: transform .2s;
     transform: scale(1.00);
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
   }
 }
 
@@ -332,9 +336,9 @@ nav .sidenav-trigger i {
 }
 
 .search-link {
-  font-family: "HarmonyOS";
+  font-family: "Product Sans";
   background-color: transparent !important;
-  color: var(--accent) !important;
+  color: var(--text) !important;
   padding: 10px !important;
   margin-left: 5px !important;
   display: block !important;
@@ -342,16 +346,23 @@ nav .sidenav-trigger i {
   padding-left: 5px !important;
 }
 
+.search-link:hover {
+  -webkit-transition: transform .2s;
+  -webkit-transform: scale(1.05);
+  transition: transform .2s;
+  transform: scale(1.05);
+}
+
 input {
   padding: 0px !important;
   margin: 0px !important;
   padding-left: 5px !important;
   border-bottom: none !important;
-  color: var(--accent) !important;
+  color: var(--text) !important;
 }
 
 input::placeholder {
-  color: var(--accent) !important;
+  color: var(--text) !important;
 }
 
 input:focus {
@@ -373,8 +384,8 @@ input:focus {
 }
 
 .rounded {
-  border: 1px solid var(--accent);
   border-radius: 24px;
+  background-color: var(--searchColor);
 }
 
 .desc {
@@ -386,7 +397,6 @@ input:focus {
 .builds {
   padding: 15px;
   border-radius: 24px;
-  box-shadow: rgb(11 43 158 / 15%) 0px 6px 20px -6px;
 }
 
 tr th {
@@ -412,9 +422,9 @@ tr th {
 }
 
 .collapsible-body {
-  background-color: var(--card) !important;
   -webkit-transition: none;
   transition: none;
+  background-color: var(--background) !important;
 }
 
 .home-bottom-info {
@@ -443,7 +453,6 @@ tr th {
 
 .credits {
   font-size: 13px;
-  font-family: "HarmonyOS";
   color: var(--text);
   margin-bottom: 3px;
 }
@@ -463,8 +472,8 @@ span {
 }
 
 .collapsible li div {
-  background-color: var(--card);
-  color: var(--text);
+  background-color: transparent;
+  color: var(--selectedItemDescription);
 }
 
 .collapsible-header,
@@ -496,9 +505,9 @@ span {
 .buildChangelog pre {
   max-height: 230px;
   overflow-y: auto;
-  background-color: var(--background);
+  background-color: var(--searchColor);
   padding: 8px;
-  border-radius: 3px;
+  border-radius: 24px;
 }
 
 .buildChangelog {
@@ -508,7 +517,6 @@ span {
 
 .label {
   padding: 0px;
-  color: var(--accent);
   text-align: center;
   font-weight: 600;
   /* text-transform: uppercase; */
@@ -531,12 +539,13 @@ span {
 .collapsible,
 .sidenav {
   box-shadow: none !important;
+  border-right:0px;
 }
 
 .z-depth-1,
 .sidenav,
 .buildcoll {
-  background-color: var(--card);
+  background-color: var(--background);
   box-shadow: 0 0.8px 4px rgba(0, 0, 0, 0.07), 0 0.8px 2px rgba(0, 0, 0, 0.15) !important;
 }
 
@@ -563,11 +572,13 @@ span {
 }
 
 a.btn:hover {
-  color: var(--text) !important;
   -webkit-transition: transform .2s;
   -webkit-transform: scale(1.05);
   transition: transform .2s;
   transform: scale(1.05);
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
 }
 
 a.btn:not(:hover) {
@@ -575,6 +586,9 @@ a.btn:not(:hover) {
   -webkit-transform: scale(1.00);
   transition: transform .2s;
   transform: scale(1.00);
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
 }
 
 a.sources:hover {
@@ -582,6 +596,9 @@ a.sources:hover {
   -webkit-transform: scale(1.10);
   transition: transform .2s;
   transform: scale(1.10);
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
 }
 
 a.sources:not(:hover) {
@@ -589,13 +606,19 @@ a.sources:not(:hover) {
   -webkit-transform: scale(1.00);
   transition: transform .2s;
   transform: scale(1.00);
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
 }
 
 .zips {
   padding: 6px;
   border-radius: 24px;
   background-color: var(--card);
-  box-shadow: rgb(11 43 158 / 15%) 0px 6px 20px -6px;
+}
+
+.zips.active {
+  background-color: var(--container);
 }
 
 .alert-box {
@@ -604,7 +627,6 @@ a.sources:not(:hover) {
   justify-content: center;
   align-items: center;
   border-radius: 3px;
-  box-shadow: 0 0.8px 4px rgba(0, 0, 0, 0.07), 0 0.8px 2px rgba(0, 0, 0, 0.15) !important;
 }
 
 @-moz-document url-prefix() {
@@ -680,7 +702,6 @@ a.sources:not(:hover) {
   max-width: var(--dimension-site-width);
   padding: 0 var(--dimension-site-padding);
   margin: 0 auto;
-  margin-top: calc(var(--dimension-site-padding) * 2);
 }
 
 .link:hover {
@@ -693,7 +714,7 @@ a.sources:not(:hover) {
 }
 
 .md5:hover {
-  color: var(--accent) !important;
+  color: var(--textHighlight) !important;
   cursor: pointer;
 }
 
@@ -707,4 +728,17 @@ a.sources:not(:hover) {
 .menuIcon {
   background: var(--background);
   margin-right: -30px !important;
+}
+
+.textHighlight {
+  color: var(--textHighlight);
+}
+
+.buttonInsideCard {
+  background-color: var(--buttonBackground) !important;
+  color: var(--buttonText)!important;
+}
+
+.description {
+  color: var(--textHighlight) !important;
 }
